resources/css/style.css
/* ... */
/*
.########.########..######..########.####.##.....##..#######..##....##.####....###....##........######.
....##....##.......##....##....##.....##..###...###.##.....##.###...##..##....##.##...##.......##....##
....##....##.......##..........##.....##..####.####.##.....##.####..##..##...##...##..##.......##......
....##....######....######.....##.....##..##.###.##.##.....##.##.##.##..##..##.....##.##........######.
....##....##.............##....##.....##..##.....##.##.....##.##..####..##..#########.##.............##
....##....##.......##....##....##.....##..##.....##.##.....##.##...###..##..##.....##.##.......##....##
....##....########..######.....##....####.##.....##..#######..##....##.####.##.....##.########..######.
*/

.section-testimonials {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(img/clients-says.jpg);
    background-size: cover;
    color: white;
    background-attachment: fixed;
}

blockquote {
    padding: 2%;
    font-style: italic;
    line-height: 145%;
    position: relative;
    margin-top: 40px;

}

blockquote:before {
    content: "\201C";
    font-size: 500%;
        display: block;
    position: absolute;
    top: -5px;
    left: -3px;
}

cite {
    font-size: 90%;
    margin-top: 25px;
    display: block;
}

cite img {
    height: 45px;
    border-radius: 50%;
    margin-right: 10px;
    vertical-align: middle;
}


/*
..######...#######..##....##.########....###.....######..########..######.
.##....##.##.....##.###...##....##......##.##...##....##....##....##....##
.##.......##.....##.####..##....##.....##...##..##..........##....##......
.##.......##.....##.##.##.##....##....##.....##.##..........##.....######.
.##.......##.....##.##..####....##....#########.##..........##..........##
.##....##.##.....##.##...###....##....##.....##.##....##....##....##....##
..######...#######..##....##....##....##.....##..######.....##.....######.
*/

.section-contacts h3{
    text-transform: uppercase;
    text-align: center;
    font-size: 140%; 
    margin-top: 30px; 
    margin-bottom: 30px;
}

.section-contacts {
    -webkit-box-shadow: inset 0px 44px 36px -45px rgba(0,0,0,0.9);
    -moz-box-shadow: inset 0px 44px 36px -45px rgba(0,0,0,0.9);
    box-shadow: inset 0px 44px 36px -45px rgba(0,0,0,0.9);
}

.section-contacts p {
    font-size: 120%;
    text-align: center;
}

.icon-contacts {
    margin: 0 auto;
}

.mapouter {
    position:relative;
    text-align:right;
    height:449px;
    width:570px;
}

.gmap_canvas {
    overflow:hidden;
    background:none !important;
    height:439px;
    width:541px;
    margin-left: 10px;
    margin-top: 10px;
}

.card-map, 
.card-msg, 
.contact-row{
    -webkit-box-shadow: 10px 10px 36px -16px rgba(0,0,0,0.75);
    -moz-box-shadow: 10px 10px 36px -16px rgba(0,0,0,0.75);
    box-shadow: 10px 10px 36px -16px rgba(0,0,0,0.75);
}


/*
..######...#######..##....##.########....###.....######..########
.##....##.##.....##.###...##....##......##.##...##....##....##...
.##.......##.....##.####..##....##.....##...##..##..........##...
.##.......##.....##.##.##.##....##....##.....##.##..........##...
.##.......##.....##.##..####....##....#########.##..........##...
.##....##.##.....##.##...###....##....##.....##.##....##....##...
..######...#######..##....##....##....##.....##..######.....##...
.########..#######..########..##.....##
.##.......##.....##.##.....##.###...###
.##.......##.....##.##.....##.####.####
.######...##.....##.########..##.###.##
.##.......##.....##.##...##...##.....##
.##.......##.....##.##....##..##.....##
.##........#######..##.....##.##.....##
*/


.contact-form {
    width: 90%;
    padding-left: 30px;
    padding-bottom: 25px;
}

input[type=text],
input[type=email],
textarea {
    width: 100%;
    padding: 2px;
    border-radius: 3px;
    border: 1px solid #ccc;
}

textarea {
    height: 150px;
}

*:focus {
    outline: none;
}

#msg-header {
    margin-top: 10px;
    text-transform: uppercase;
    text-align: center;
    font-size: 120%; 
    margin-bottom: 30px;
    /* border-bottom: 2px solid #02b200; */
    background-color: #02b200;
    color: white;
}


/*
.########..#######...#######..########.########.########.
.##.......##.....##.##.....##....##....##.......##.....##
.##.......##.....##.##.....##....##....##.......##.....##
.######...##.....##.##.....##....##....######...########.
.##.......##.....##.##.....##....##....##.......##...##..
.##.......##.....##.##.....##....##....##.......##....##.
.##........#######...#######.....##....########.##.....##
*/

footer {
    background-color: rgb(39, 39, 39);
    padding: 30px;
    font-size: 80%;
}

.footer-nav {
    list-style: none;
    float: left;
}

.social-links {
    list-style: none;
    float: right; 
    margin-right: 70px;
}

.footer-nav li,
.social-links li {
    display: inline-block;
    margin-right: 20px;
}

.footer-nav li:last-child,
.social-links li:last-child {
    margin-right: 0px;
}

.footer-nav li a:link,
.footer-nav li a:visited,
.social-links li a:link,
.social-links li a:visited {
    text-decoration: none;
    border: 0px;
    color: #888;
    transition: color 0.2s;
}

.footer-nav li a:hover,
.footer-nav li a:active {
    color: #039700;
}

.social-links li a:link,
.social-links li a:visited {
    font-size: 170%;

}

.facebook,
.twitter,
.insta {
    transition: color 0.2s;
}

.facebook:hover {
    color: #3b5998;
}

.twitter:hover {
    color: #55acee;
}

.insta:hover {
    color: #e95950;
}

footer p {
    margin-top: 20px;
    text-align: center;
    color: #888;
}
/* ... */

